created get request from server to database

--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Streamifi</title>
-    </head>
-    <body>
-        <div id="broadcast">
-            <Broadcast/>
-        </div>
-    </body>
+
+<head>
+    <title>Streamifi</title>
+</head>
+
+<body>
+    <div id="broadcast">
+        <Broadcast />
+    </div>
+    <script type="text/javascript" src="bundle.js"></script>
+</body>
+
 </html>
